--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </tr>
           <tr>
             <td>X</td>
-            <td>Zilla Parshiad High School, Pallerlamudi</td>
+            <td>Zilla Parishad High School, Pallerlamudi</td>
             <td>2018</td>
             <td>88</td>
           </tr>
